@@ -1,37 +1,204 @@
-o de des ja fuiniconava depois da alteraçao la no standalose.conf ele deu pau
-sisam-backend-internet-des-52-wcbll
-CrashLoopBackOff
+Skip to main content
+Azure DevOps
+projetos
+/
+Caixa
+/
+Pipelines
+Search
 
 
-/opt/jboss/bin/standalone.conf: line 43: =org.jboss.byteman: command not found
-=========================================================================
+Caixa
 
-  JBoss Bootstrap Environment
+Overview
 
-  JBOSS_HOME: /opt/jboss
+Boards
 
-  JAVA: /usr/lib/jvm/jre-17-openjdk-17.0.7.0.7-3.el8.x86_64/bin/java
+Repos
 
-  JAVA_OPTS:  -Xlog:gc*:file="/opt/jboss/standalone/log/gc.log":time,uptimemillis:filecount=5,filesize=3M -Djdk.serialFilter="maxbytes=10485760;maxdepth=128;maxarray=100000;maxrefs=300000" -Xms1024m -Xmx2048m -XX:MetaspaceSize=96m -XX:MaxMetaspaceSize=2048m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs= -Djava.awt.headless=true -Djavax.net.ssl.trustStore=/opt/jboss/standalone/configuration/caixa-truststore-acteste-nprd.jks -Djavax.net.ssl.trustStorePassword=changeit -Djboss.modules.policy-permissions=true -Xbootclasspath/a:/opt/jboss/modules/system/layers/base/org/jboss/logmanager/main/jboss-logmanager-2.1.18.Final-redhat-00001.jar:/opt/jboss/modules/system/layers/base/org/jboss/log4j/logmanager/main/log4j-jboss-logmanager-1.2.0.Final-redhat-00001.jar:/opt/jboss/modules/system/layers/base/org/wildfly/common/main/wildfly-common-1.5.4.Final-redhat-00001.jar -Djboss.modules.system.pkgs=org.jboss.byteman,org.jboss.logmanager -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Dsun.util.logging.disableCallerCheck=true -server -XX:+ExplicitGCInvokesConcurrent -XX:+UseG1GC -XX:MaxGCPauseMillis=500 -javaagent:/opt/jmx_exporter/jmx_prometheus.jar=8778:/opt/jmx_exporter/jmx_prometheus.yaml -javaagent:/opt/apm_agent/elastic-apm-agent.jar -Delastic.apm.config_file=/opt/apm_agent/elasticapm.properties -Delastic.apm.service_name=sisam -Delastic.apm.environment=DES -Delastic.apm.application_packages=br.gov.caixa -Delastic.apm.server_urls=https://apm-server-devops.apps.produtos4.caixa/ -Delastic.apm.global_labels=deployment=sisam-backend-internet-des -Djava.net.useSystemProxies=false -Dhttp.proxyHost=proxydes.caixa -Dhttp.proxyPort=80 -Dhttps.proxyHost=proxydes.caixa -Dhttps.proxyPort=80 -Dhttp.nonProxyHosts=localhost\|127.0.0.1\|*.caixa  --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED --add-exports=java.desktop/sun.awt=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.management/javax.management=ALL-UNNAMED --add-opens=java.naming/javax.naming=ALL-UNNAMED
+Pipelines
+Pipelines
+Environments
+Releases
+Library
+Task groups
+Deployment groups
+Portal Infra
 
-=========================================================================
+Test Plans
 
-Jul 10, 2026 4:40:17 PM java.lang.System$LoggerFinder lambda$accessProvider$0
-WARNING: Failed to instantiate LoggerFinder provider; Using default.
-OpenJDK 64-Bit Server VM warning: Sharing is only supported for boot loader classes because bootstrap classpath has been appended
-[0m16:40:19,080 INFO  [org.jboss.modules] (main) JBoss Modules version 1.12.2.Final-redhat-00001
-[0m[0m16:40:19,488 INFO  [org.jboss.msc] (main) JBoss MSC version 1.4.12.Final-redhat-00001
-[0m[0m16:40:19,497 INFO  [org.jboss.threads] (main) JBoss Threads version 2.4.0.Final-redhat-00001
-[0m[0m16:40:19,700 INFO  [org.jboss.as] (MSC service thread 1-2) WFLYSRV0049: JBoss EAP 7.4.0.GA (WildFly Core 15.0.2.Final-redhat-00001) starting
-[0m[0m16:40:19,802 INFO  [org.jboss.vfs] (MSC service thread 1-2) VFS000002: Failed to clean existing content for temp file provider of type temp. Enable DEBUG level log to find what caused this
-[0m[0m16:40:21,313 INFO  [org.wildfly.security] (ServerService Thread Pool -- 29) ELY00001: WildFly Elytron version 1.15.3.Final-redhat-00001
-[0m[0m16:40:23,207 INFO  [org.jboss.as.repository] (ServerService Thread Pool -- 18) WFLYDR0001: Content added at location /opt/jboss/standalone/data/content/fb/62f492ef5e47aa9eaefd43bfe8c4c4902dca5e/content
-[0m[0m16:40:23,514 INFO  [org.jboss.security] (Controller Boot Thread) PBOX00361: Default Security Vault Implementation Initialized and Ready
-[0m[31m16:40:23,515 ERROR [org.jboss.as.controller.management-operation] (Controller Boot Thread) WFLYCTL0013: Operation ("add") failed - address: ([("core-service" => "vault")]) - failure description: "WFLYCTL0211: Cannot resolve expression '${VAULT::SISAM-BACKEND-INTERNET-DES:: KEYCLOAK_CREDENTIALS_INTERNET_SECRET::1}'"
-[0m[31m16:40:23,520 FATAL [org.jboss.as.server] (Controller Boot Thread) WFLYSRV0056: Server boot has failed in an unrecoverable manner; exiting. See previous messages for details.
-[0m[0m16:40:23,586 INFO  [org.jboss.as] (MSC service thread 1-2) WFLYSRV0050: JBoss EAP 7.4.0.GA (WildFly Core 15.0.2.Final-redhat-00001) stopped in 64ms
-[0m
+Artifacts
+Project settings
+All pipelines
+
+sisam
+
+SISAM-backend-internet
+Predefined variables
+SonarQube Variables (1)
+Variáveis com dados do SonarQube
+Scopes: Release
+Usuario-Azure-DevOps (12)
+Scopes: Release
+EGRESS_IP_OKD (74)
+WO0000072264656 - Config Portal Infrafácil NO_PROXY
+Scopes: Release
+MONITORACAO_LOGS (4)
+REQ000143540550 - Conforme autorizado na req por FLAVIO ALMEIDA GAGLIARDI, removido as variáveis JAVA_OPTS_MONITORING e URL_APM_SERVER, por entrar em conflitos com releases que utilizam o Application Insights
+Scopes: Release
+MUDANCA_GSC (3)
+WO0000079495945
+Scopes: Release
+ADAPTER_VARIABLES (9)
+Variáveis disponíveis para todas os projetos do tipo ADAPTER.
+Scopes: Release
+OKD-REGISTRY-CENTRALIZADO (7)
+Credenciais para o Registry Centralizado - Produtos 4 (OKD)
+Scopes: Release
+OKD-4-NPRD (12)
+Credenciais para o Cluster OKD4 de NPRD (DES/TQS/HMP)
+Scopes: EC DES,EC TQS
+SISAM-BACKEND-INTERNET-DES (46)
+Grupo de variáveis de SISAM-BACKEND-INTERNET-DES
+
+Scopes: EC DES
+AMBIENTE
+DES
+APIM_CLIENT_APIKEY
+${VAULT::SISAM-BACKEND-INTERNET-DES::APIKEY::1}
+APIM_SERVER_URL
+https://api.des.caixa:8443
+APIM_SERVICE_STRATEGY
+direct
+CGC_UNIDADE_DES
+7390
+CGC_UNIDADE_OPS
+7259
+CONTENT_PERSISTENCE_STRATEGY
+siecm
+JKS_FILE
+caixa-truststore-azure_v6.jks
+JVM_HEAP_MAX
+2048m
+JVM_HEAP_MIN
+1024m
+JVM_METASPACE_MAX
+2048m
+JVM_METASPACE_MIN
+96m
+JVM_PROXY_HOST
+proxydes.caixa
+JVM_PROXY_PORT
+80
+KEYCLOAK_CREDENTIALS_DEFAULT_REALM_INTERNET
+internet
+KEYCLOAK_CREDENTIALS_DEFAULT_REALM_INTRANET
+intranet
+KEYCLOAK_CREDENTIALS_DEFAULT_RESOURCE
+cli-ser-sam
+KEYCLOAK_CREDENTIALS_DEFAULT_SECRET
+${VAULT::SISAM-BACKEND-INTERNET-DES::KEYCLOAK_CREDENTIALS_DEFAULT_SECRET::1}
+KEYCLOAK_CREDENTIALS_INTERNET_RESOURCE
+cli-ser-sam
+KEYCLOAK_CREDENTIALS_INTERNET_SECRET
+${VAULT::SISAM-BACKEND-INTERNET-DES:: KEYCLOAK_CREDENTIALS_INTERNET_SECRET::1}
+KEYCLOAK_CREDENTIALS_SIECM_RESOURCE
+cli-ser-sam
+KEYCLOAK_CREDENTIALS_SIECM_SECRET
+${VAULT::SISAM-BACKEND-INTERNET-DES::KEYCLOAK_CREDENTIALS_SIECM_SECRET::1}
+KEYCLOAK_SERVER_URL_INTERNET
+https://logindes.caixa.gov.br/auth
+KEYCLOAK_SERVER_URL_INTRANET
+https://login.des.caixa/auth
+PASSWORD_TRUSTSTORE
+changeit
+SIECM_SERVER_URL
+http://siecm.des.caixa/siecm-web/ECM
+SIECM_SERVICE_OBJECTSTORE
+OS_PADM
+SISAM_DATASOURCE_DATABASE
+SAMDB001
+SISAM_DATASOURCE_ENCRYPT
+false
+SISAM_DATASOURCE_PASSWORD
+${VAULT::SISAM-BACKEND-INTERNET-DES::SISAM_DATASOURCE_PASSWORD::1}
+SISAM_DATASOURCE_PORT
+21153
+SISAM_DATASOURCE_SERVER
+10.116.93.230\SQLDES153
+SISAM_DATASOURCE_USERNAME
+SSAMBD01
+SISAM_SERVER_INTERNET_URL
+https://sisam-backend-internet-des.apps.nprd.caixa/sisam-internet
+SISAM_SPA_INTRANET_URL
+https://sisam-frontend-des.apps.nprd.caixa
+SISAM_SPA_PATROCINIO_URL
+https://sisam-frontend-patrocinio-des.apps.nprd.caixa
+SISTEMAAMBIENTE
+DES
+SISTEMANOME
+SISAM-API-INTERNET
+SISTEMA_AMBIENTE
+des
+SITE
+okd4_nprd
+UNIDADE
+BR
+VAULT_ITERATION_COUNT
+44
+VAULT_KEYSTORE_ALIAS
+SecurityKey
+VAULT_KEYSTORE_FILE
+vault-sisam-internet-des.keystore
+VAULT_KEYSTORE_PASSWORD
+MASK-lHQotGsUSmQ5YQRzdtNLD361rwn0c0oJ
+VAULT_SALT
+87654321
+SISAM-BACKEND-INTERNET-TQS (46)
+Grupo de variáveis de SISAM-BACKEND-INTERNET-TQS
+Scopes: EC TQS
+OKD-4-APL (12)
+Scopes: EC PRD
+SISAM-BACKEND-INTERNET-PRD (1)
+Grupo de variáveis de SISAM-BACKEND-INTERNET-PRD
+Scopes: EC PRD
+|Manage variable groups
+Expanded
+
+Showing 2 items.
+
+Showing 6262 items.
+
+Showing 1 items.
+
+Showing 6167 filtered items.
+
+Showing 5991 filtered items.
+
+Showing 757 filtered items.
+
+Showing 123 filtered items.
+
+Showing 12 filtered items.
+
+Collapsed
+
+Expanded
+
+Collapsed
+
+5 pipelines found
+
+Select a release pipeline to view its releases
+
+2 pipelines found
+
+Row 3
+
+Showing filters 1 through 2
 
 
 
 
+
+ela esta na varibles group
